added comments about dependencies

--- a/home.html
+++ b/home.html
@@ -43,8 +43,9 @@
   <!--If you want to use the default quantum font family, use style-2.css instead of style.css-->
   <!-- <link rel="stylesheet" href="assets/css/style-2.css"> -->
 
-  <!-- <link rel="stylesheet" href="/Content/products-vendor.css"> -->
-  <!-- <link rel="stylesheet" href="/Content/products.css"> -->
+  <!--these stylesheets have no dependencies in an effort to just rely on the existing QTM dependencies.-->
+  <!-- <link rel="stylesheet" href="assets/css/products-vendor.css"> -->
+  <!-- <link rel="stylesheet" href="assets/css/products.css"> -->
 </head>
 
 <body>
@@ -935,8 +936,8 @@
 <script src="assets/js/app.js"></script>
 
 <!-- this script includes no dependencies in an effort to use the current site's dependencies-->
-<!-- <script src="Content/products-vendor.js"></script>
-<script src="Content/products.js"></script> -->
+<!-- <script src="assets/css/products-vendor.js"></script>
+<script src="assets/css/products.js"></script> -->
 
 <script src="https://www.quantum.com/Scripts/aos.js"></script>
 
