updated container size

--- a/html/product-vertical.html
+++ b/html/product-vertical.html
@@ -1890,7 +1890,7 @@
 <main class="main-home">
   
   <section class="top-section white-text" data-parallax="scroll" data-image-src="../img/product_Marquee.jpg">
-    <div class="content">
+    <div class="container">
      <div class="col-xs-12 col-md-6">
       <h1 class="top-section__title">Unmatched Streaming Performance.</h1>
       <h3 class="top-section__description">Recognized as a leader in scale-out storage for high volume, rich media workflows, Quantum file solutions are
@@ -1900,7 +1900,7 @@
   </section><!-- end top-section section -->
 
   <section class="links-section">
-    <div class="content">
+    <div class="container">
       <div class="links-section__wrapper">
         <div class="links-section__left-part">
           <div class="links-section__heading">File Products</div>
@@ -1978,7 +1978,7 @@
   </section><!-- end links-section section -->
 
   <section class="overview default-section" id="overview">
-    <div class="content">
+    <div class="container">
       <div class="row">
         <div class="col-lg-6 order-lg-1 overview__item" data-aos="fade-left">
           <div class="overview__image-wrapper">
@@ -2017,7 +2017,7 @@
   </section><!-- end overview section -->
 
   <section class="products default-section gray-bg" data-uk-scrollspy="{cls:'uk-animation-fade'}" id="products">
-    <div class="content">
+    <div class="container">
       <h1>Quick compare: File Storage products</h1>
       <div class="products__slider-wrapper">
         <div class="products__slider products__slider--hidden">
@@ -2167,7 +2167,7 @@
   </section><!-- end products section -->
 
   <section class="benefits default-section section-title-centered" id="benefits">
-    <div class="content">
+    <div class="container">
       <h1 class="benefits__title">Featured Benefits</h1>
       <div class="row">
         <div class="col-lg-6 benefits__item">
@@ -2225,7 +2225,7 @@
   </section><!-- end benefits section -->
 
   <section class="solutions default-section section-title-centered white-text" id="solutions">
-    <div class="content">
+    <div class="container">
       <h1>File Product Solution Areas</h1>
       <div class="row justify-content-center">
         <div class="col-md-6 col-lg-4">
@@ -2278,7 +2278,7 @@
   </section><!-- end solution section -->
 
   <section class="customers default-section" id="customers">
-    <div class="content">
+    <div class="container">
       <div class="customers__nav">
         <div class="customers__nav-slider customers__nav-slider-js">
           <div class="customers__nav-item-wrapper">
@@ -2303,12 +2303,6 @@
             <div class="customers__nav-item customers__nav-item--pink">
               <img class="customers__logo" src="../img/customer-4.png" alt="customer">
               <img class="customers__logo-hover" src="../img/customer-hover-4.png" alt="customer">
-            </div>
-          </div>
-          <div class="customers__nav-item-wrapper">
-            <div class="customers__nav-item customers__nav-item--red">
-              <img class="customers__logo" src="../img/customer-5.png" alt="customer">
-              <img class="customers__logo-hover" src="../img/customer-hover-5.png" alt="customer">
             </div>
           </div>
           <!--<div class="customers__nav-item-wrapper d-md-none">-->
@@ -2406,32 +2400,12 @@
             </div>
           </div>
         </div>
-        <div class="customers__slider-item">
-          <div class="row">
-            <div class="col-lg-7 order-lg-1">
-              <div class="customers__video-wrapper">
-                <iframe class="customers__video" data-src="https://player.vimeo.com/video/58990785?amp;api=1" allowfullscreen mozallowfullscreen webkitallowfullscreen frameborder="0" width="100%" height="100%"></iframe>
-                <img class="customers__video-image" src="../img/video-bg.jpg" alt="video">
-                <div class="customers__shadow-layer"></div>
-                <div class="customers__play-btn">
-                  <span>Watch Customer Story (2:43)</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-5 order-lg-0">
-              <h3>The US Ravens Celebrate Their Twentieth Season with a Technology Transformation and Workflow Enhancement.</h3>
-              <p>“By using the StorNext Pro solution and integrating workflow applications, we deployed this system in a few weeks, and it was up and running in plenty of time for our preseason games.”</p>
-              <h6><span>Jay O’Brien</span>Director of Broadcasting & Gameday Productions</h6>
-              <a href="#" class="button-default button-default--purple m-t-20">View Full Customer Story</a>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
   </section><!-- end customers section -->
 
   <section class="partners default-section white-text" id="partners">
-    <div class="content">
+    <div class="container">
       <div class="row">
         <div class="col-lg-5">
           <div class="partners__text">
@@ -2480,7 +2454,7 @@
   </section><!-- end technology section -->
 
   <section class="resources default-section" id="resources">
-    <div class="content">
+    <div class="container">
       <h1>File Products Resources</h1>
       <div class="row resources__wrapper">
         <div class="col-lg-2">
@@ -2672,7 +2646,7 @@
   </section><!-- end resources section -->
 
   <section class="contacts default-section white-text">
-    <div class="content">
+    <div class="container">
       <div class="row">
         <div class="col-lg-6">
           <h1>Join over 25,000 companies worldwide using Quantum to power the video and rich media you love most.</h1>
