--- a/html/product-vertical.html
+++ b/html/product-vertical.html
@@ -12,9 +12,9 @@
   <meta name="keywords" content="">
   <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/new-nav.css">
+  <link rel="stylesheet" href="../css/new-nav.css?v=5.0.7">
   <link rel="stylesheet" href="../css/vendor.css">
-  <link rel="stylesheet" href="../css/style-2.css?v=5.0.6">
+  <link rel="stylesheet" href="../css/style-2.css?v=5.0.7">
   <link rel="stylesheet" href="../css/qdx.css" type="text/css">
   <link rel="stylesheet" href="../css/templates.css" type="text/css">
   <link rel="stylesheet" href="../css/footer.css">
