--- a/html/product-vertical.html
+++ b/html/product-vertical.html
@@ -2816,8 +2816,8 @@
 
 
 <script src="../js/vendor.js"></script>
-<script src="../js/app.js?v=5.1.2"></script>
-<!-- <script src="../src/js/app.js"></script> -->
+<!-- <script src="../js/app.js?v=5.1.2"></script> -->
+<script src="../src/js/app.js"></script>
 <script src="../js/templates.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
