--- a/html/product-vertical.html
+++ b/html/product-vertical.html
@@ -2122,7 +2122,7 @@
             </div>
             <a href="#" class="button-default button-default--blue">Explore Scalar i3</a>
           </div>
-          <div class="products__item">
+          <!-- <div class="products__item">
             <a href="#" class="products__item-link products__item-cell products__item-cell--image">
               <img src="../img/product-2.png" class="products__item-image" alt="product">
               <h2 class="products__item-title">Scalar i6 / AEL6</h2>
@@ -2163,7 +2163,7 @@
               <p class="products__item-description">Vault Control Path and Data Path Failover</p>
             </div>
             <a href="#" class="button-default button-default--blue">Explore Scalar i6000</a>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -2816,8 +2816,8 @@
 
 
 <script src="../js/vendor.js"></script>
-<script src="../js/app.js?v=5.1.2"></script>
-<!-- <script src="../src/js/app.js"></script> -->
+<!-- <script src="../js/app.js?v=5.1.2"></script> -->
+<script src="../src/js/app.js"></script>
 <script src="../js/templates.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
